# yew-psp22-dashboard

./: .gitignore  README.md  dapp-101f42b6b37b7eb4.js  dapp-101f42b6b37b7eb4_bg.wasm  dapp-158e0fd01a9f060d.js  dapp-158e0fd01a9f060d_bg.wasm  dapp-2f3bc7b15c9dbcea.js  dapp-2f3bc7b15c9dbcea_bg.wasm  dapp-4877a3196328fe84.js  dapp-4877a3196328fe84_bg.wasm  dapp-5e2a381918547b8f.js  dapp-5e2a381918547b8f_bg.wasm  dapp-6b695c8510d52680.js  dapp-6b695c8510d52680_bg.wasm  dapp-7723d9c3c74d3d65.js  dapp-7723d9c3c74d3d65_bg.wasm  dapp-7de4c9e28cf248c8.js  dapp-7de4c9e28cf248c8_bg.wasm  dapp-9b4b652366ea9c68.js  dapp-9b4b652366ea9c68_bg.wasm  dapp-9b8936f937b09f1f.js  dapp-9b8936f937b09f1f_bg.wasm  dapp-a8195a3e446d0c2e.js  dapp-a8195a3e446d0c2e_bg.wasm  dapp-aa28014fbcee0888.js  dapp-aa28014fbcee0888_bg.wasm  dapp-aab40658c5c6ba5f.js  dapp-aab40658c5c6ba5f_bg.wasm  dapp-affb627bb8553562.js  dapp-affb627bb8553562_bg.wasm  dapp-b1e75df7338c0d53.js  dapp-b1e75df7338c0d53_bg.wasm  dapp-ea2d6a28b70c32e6.js  dapp-fafefa06e8a01963.js  dapp-fafefa06e8a01963_bg.wasm  dapp-ffba43402f61b010.js  dapp-ffba43402f61b010_bg.wasm  index-da10ec8f72f2fdee.css  index.html  rust-toolchain.toml  (+1 more)
.github/workflows/: gh-pages.yml
contract/: Cargo.toml  example.rs  lib.rs
contract/examples/: example.rs  subxt_example.rs
dapp/: Cargo.toml  index.html  index.js
dapp/src/: lib.rs  main.rs
dapp/src/components/: mod.rs  send_token_component.rs
dapp/src/routes/: fetching.rs  signing.rs  token.rs
dapp/src/services/: mod.rs  token_service.rs
